k8s/platform/n8n/overlays/staging/httproute-patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-n8n
spec:
  parentRefs:
    - name: homelab-gw
      namespace: staging-networking
      sectionName: https
  hostnames:
    - n8n.apps.10-96-11-221.sslip.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: ak-outpost-shared-outpost
          namespace: staging-auth
          port: 9000
